# X320_adc_curl

./: CMakeLists.txt  README.md
state_thingy/: CMakeLists.txt
state_thingy/include/: digital_input_state.h
state_thingy/src/: digital_input_state.c
state_thingy/test/: CMakeLists.txt  digital_input_state_test.c
